Sun Oct 17 01:33:47 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_string.s: Added.  Tests :LEFT:,
	:RIGHT:, :CC:, :LEN:, :STR:.
	* regression/tests_pass/operator_index.s: Added.  Tests :INDEX:.
	* regression/tests_pass/info.s: Changed into a pure test on ! and INFO.
	* regression/Makefile: Update comment & output.
	* commands.c (c_info): Better error behaviour.  When arithmetic
	expression evaluates to 0, output string expression via stdout as is,
	not as warning.
	* error.c (errorCore): When not in parse context, add extra newline
	to stderr output.
	* value.h (ValueString): Update comment that NUL termination of string
	is not garanteed.
	* reloc.c: Fix identation.
	* eval.c (evalBinop): Fix/update/clean Op_concat, Op_left, Op_right
	case.
	(evalUnop): Fix/update/clean Op_str, Op_chr.

Sat Oct 16 19:25:14 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression: Removed the need of creating config.h by using asasm's
	-PD option.
	* regression/tests_pass/apcs.s, regression/hdr/APCS-32/Common: Made
	test stronger by assuring the GET command succeeded.
	* input.c (inputNextLine): Simplified code a little bit. Integer
	variable setting happens with SETA, not SETI.
	* main.c: Improve objasm compatibility by supporting -PreDefine as an
	alias to -PD.
	* variables.c (var_type): Integer variable type is 'A', not 'I'.

Sat Oct 16 18:06:47 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_fail/register_based_map_fail.s,
	regression/tests_fail/ldr_from_expr_fail.s: Add missing END.
	* regression/tests_fail/label_space.s: Added (shows missing
	support for label space operator).
	* global.h: Add missing config.h include.
	* output.h, Makefile.am: Add subversion revision number we
	used for build.

Sat Oct 16 17:08:12 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* Rename BOOL/TRUE/FALSE to ISO C99's bool/true/false.
	* Rename WORD/FLOAT into ARMWord/ARMFloat.

Tue Feb 2  18:29:10 2010  Lee Noar  <leenoar@sky.com>
